# 2023_Pair

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Log.md  Node.cpp  Node.h  Testfile.txt  main.cpp
Article/: BUAA-2023软件工程结对编程博客作业.md
GUI/: Wordlist  input.txt  solution.txt
GUI/src/: FileIO.java  Main.java  main.cpp
guibin/: GUI使用手册.md  input.txt
guibin/src/: CoreAPI.java  FileIO.java  Main.java
lib/docs/: advanced.md  gmock_cheat_sheet.md  primer.md
lib/docs/reference/: testing.md
lib/googlemock/: CMakeLists.txt
lib/googlemock/include/gmock/: gmock-matchers.h  gmock-more-matchers.h  gmock-nice-strict.h  gmock-spec-builders.h  gmock.h
lib/googlemock/src/: gmock-spec-builders.cc  gmock.cc
lib/googlemock/test/: gmock-actions_test.cc  gmock-cardinalities_test.cc  gmock-function-mocker_test.cc  gmock-internal-utils_test.cc  gmock-matchers-arithmetic_test.cc  gmock-matchers-comparisons_test.cc  gmock-matchers-containers_test.cc  gmock-matchers-misc_test.cc  gmock-matchers_test.h  gmock-more-actions_test.cc  gmock-nice-strict_test.cc  gmock-port_test.cc  gmock-pp-string_test.cc  gmock-spec-builders_test.cc  gmock_all_test.cc  gmock_link_test.h  gmock_output_test.py  gmock_output_test_.cc  gmock_test.cc
lib/googletest/: CMakeLists.txt
lib/googletest/cmake/: internal_utils.cmake
lib/googletest/include/gtest/: gtest-assertion-result.h  gtest-death-test.h  gtest-param-test.h  gtest-typed-test.h  gtest.h  gtest_prod.h
lib/googletest/include/gtest/internal/: gtest-death-test-internal.h  gtest-internal.h  gtest-param-util.h  gtest-port.h  gtest-type-util.h
lib/googletest/samples/: prime_tables.h  sample10_unittest.cc  sample1_unittest.cc  sample2_unittest.cc  sample3_unittest.cc  sample5_unittest.cc  sample6_unittest.cc  sample7_unittest.cc  sample8_unittest.cc  sample9_unittest.cc
lib/googletest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest.cc
lib/googletest/test/: googletest-break-on-failure-unittest.py  googletest-catch-exceptions-test.py  googletest-death-test-test.cc  googletest-death-test_ex_test.cc  googletest-failfast-unittest.py  googletest-filepath-test.cc  googletest-filter-unittest.py  googletest-filter-unittest_.cc  googletest-global-environment-unittest.py  googletest-json-outfiles-test.py  googletest-json-output-unittest.py  googletest-list-tests-unittest.py  googletest-list-tests-unittest_.cc  googletest-listener-test.cc  googletest-options-test.cc  googletest-output-test.py  googletest-output-test_.cc  googletest-param-test-test.cc  googletest-port-test.cc  googletest-printers-test.cc  googletest-shuffle-test.py  googletest-throw-on-failure-test.py  googletest-throw-on-failure-test_.cc  gtest-typed-test_test.cc  gtest-unittest-api_test.cc  gtest_all_test.cc  gtest_assert_by_exception_test.cc  gtest_environment_test.cc  gtest_help_test.py  gtest_help_test_.cc  gtest_list_output_unittest.py  gtest_list_output_unittest_.cc  gtest_no_test_unittest.cc  gtest_pred_impl_unittest.cc  gtest_repeat_test.cc  gtest_skip_check_output_test.py  gtest_skip_test.cc  gtest_stress_test.cc  gtest_test_macro_stack_footprint_test.cc  gtest_testbridge_test_.cc  (+6 more)
src/: Core.cpp  Core.h  Error.cpp  Error.h  FileIO.cpp  FileIO.h  FileReader.cpp  FileReader.h  Node.h  PerfCore.h  PerfFileIO.h  Test.cpp  Testfile1.txt  Wordlist  api_cpy.cpp  main.cpp  origin_main.cpp
test/: PerfCore.cpp  PerfFileIO.cpp  PerfFileIO.h  Test.cpp
test/PerfTest/: PerfTest.cpp
test/Testfiles/: PTest1.txt  PTest2.txt  PTest3.txt  input1.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  input8.txt
test/coretest/: coretest.cpp  errorTest.cpp
test/iotest/: iotest.cpp
test_bin/: PerfTest  Test  solution.txt
tests/coretest/: coretest.cpp
tests/iotest/: iotest.cpp
tests/rftest/: rftest.cpp
